spacing bug fixed

--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -3,12 +3,18 @@
 @import "components/components";
 @import "pages/pages";
 
+h1 {
+  padding: 0;
+  margin: 0;
+}
 body {
   background: $background;
   color: $color-text-primary;
   font-family: "Barlow", sans-serif;
   font-size: 1rem;
   font-weight: 300;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
